--- a/styles/chrome.css
+++ b/styles/chrome.css
@@ -1,18 +1,39 @@
-canvas {
-  background-color: rgb(230, 240, 230);
-  margin-left: 5em;
-  margin-top: -12em;
-}
+/* CSS da applicare a Google Chrome */
 
+canvas {
+  background-color: rgb(0, 240, 230);
+  margin-left: 5em;
+}
+/* Toolbar */
 #tool{
 	margin-left: 0.5em;
 	position: fixed;
 	}
+.toolbarButton{
+	width: 3em;
+	height:2em;
+	cursor:pointer;
+}
+
+#selectionButton{
+	background-image:url("../pages/images/selezione.png");
+		background-repeat:no-repeat;
+		background-position: center;
+		
+		
+	}
+#squareButton{
+	background-image:url("../pages/images/quadrato.png");
+	background-repeat:no-repeat;
+	background-position: center;
+}
+
 
 
 /*Tavolozza*/
 .paletteComponent{
-	height:1em;
+	width:6px;
+	height:4em;
 	margin-right:-0.35em;
 	cursor:pointer;
 	border-top:solid;
@@ -36,6 +57,15 @@ canvas {
 	margin-top: 0.1em;
 }
 
+
+/*zona salva/carica SVG */
+#saveLoadZone{
+	display: inline-block;
+	
+}
+
+
+/*tooltip CSS avanzato */
 span.tooltip{ 
 	position:relative; /*questa è fondamentale*/
     z-index:24; 
@@ -54,27 +84,6 @@ span.tooltip:hover span{ /*lo span verrý mostrato solo sullo stato :hover */
     border: 1px solid #0cf; background-color: #cff; color:#000;
     font-size: 80%;text-align: center
     }
-
-.toolbarButton{
-	width: 3em;
-	height:2em;
-	cursor:pointer;
-}
-
-#selectionButton{
-	background-image:url("../pages/images/selezione.png");
-
-	}
-#squareButton{
-	background-image:url("../pages/images/quadrato.png");
-}
-
-/*zona salva/carica SVG */
-#saveLoadZone{
-	display: inline-block;
-	
-}
-
 
 
 
@@ -178,4 +187,3 @@ span.tooltip:hover span{ /*lo span verrý mostrato solo sullo stato :hover */
 
 .flora .ui-dialog .ui-resizable-ne,
 .flora.ui-dialog .ui-resizable-ne { cursor: ne-resize; width: 9px; height: 29px; right: 0px; top: 0px; background: transparent url(i/dialog-ne.gif); }
-
