--- a/styles/style.css
+++ b/styles/style.css
@@ -1,9 +1,9 @@
 canvas {
   background-color: rgb(230, 240, 230);
   margin-left: 5em;
+  	margin-top:0.5em;
+
 }
-
-
 
 /*Tavolozza*/
 .paletteComponent{
@@ -35,6 +35,7 @@ canvas {
 
 /* Caratteristiche generiche  toolbar */
 #tool{
+	margin-top:0.5em;
 	margin-left: 0.5em;
 	position: fixed;
 	}
