--- a/styles/style.css
+++ b/styles/style.css
@@ -2,6 +2,8 @@ canvas {
   background-color: rgb(230, 240, 230);
   margin-left: 5em;
   	margin-top:0.1em;
+  	border-style: solid;
+  	border-width: 2px 2px 2px 2px ;
 
 }
 
