--- a/styles/style.css
+++ b/styles/style.css
@@ -95,7 +95,9 @@ margin-left:0.5em;
 #polygonButton{
 	background-image:url("../pages/images/poligono.png");
 }
-
+#textButton{
+	background-image:url("../pages/images/testo.png");
+}
 
 
 /*zona salva/carica SVG */
