--- a/styles/style.css
+++ b/styles/style.css
@@ -82,7 +82,7 @@ margin-left:0.5em;
 	background-image:url("../pages/images/lineaDritta.png");
 		}	
 	
-#bezierButton{
+#bezierCurveButton{
     background-image:url("../pages/images/linea.png");
 	}
 #squareButton{
