--- a/styles/menu_bar/menu-item.css
+++ b/styles/menu_bar/menu-item.css
@@ -107,7 +107,7 @@
 	padding-left:3px;
 	padding-right:3px;
 	background-repeat:repeat-y;
-	background-image:url('../../pages/images/menu_bar/menu_strip_separator.gif');
+	background-image:url('../../pages/images/menu_bar/menu_strip_separator.png');
 	
 }
 
