--- a/styles/style.css
+++ b/styles/style.css
@@ -10,18 +10,6 @@ canvas {
   	border-width: 2px 2px 2px 2px ;
 }
 
-/*bottoni salva */
-a.button{float: left;height: 35px;padding-left: 18px; 
-    font: bold 12px/35px "Trebuchet MS",Arial,sans-serif;
-    background: url(../pages/images/bottone.png) no-repeat top left;
-    text-decoration: none;color: #286C98}
-
-a.button span{display: block;padding-right: 18px;
-    background: url(../pages/images/bottone.png) no-repeat top right}
-
-a.button:hover{background-position: bottom left;color: #6B9828}
-a.button:hover span{background-position: bottom right}
-
 
 /*Tavolozza*/
 .paletteComponent{
@@ -62,7 +50,9 @@ margin-left:0.5em;
 	border:solid;	
 }
 
-
+#opBorder,#opFill{
+  margin-top:-0.5em; 
+}
 
 /* Caratteristiche generiche  toolbar */
 #tool{
@@ -129,8 +119,7 @@ margin-left:0.5em;
 }
 /*zona salva/carica SVG */
 #saveLoadZone{
-	display: inline-block;
-	
+	display: inline-block;	
 }
 
 
