--- a/styles/msie8.css
+++ b/styles/msie8.css
@@ -1,10 +1,11 @@
+/* CSS per IE8, in modalità IE8 standard */
 body{
 	background-color: #efefef;
 }
 canvas {
   background-color: #ffffff;
   margin-left: 5.5em;
-  margin-top: -23em;
+  margin-top: 1em;
 }
 
 #tool{
@@ -71,6 +72,8 @@ width: 400px;display: none;
 	background-repeat: no-repeat;
 	background-position: center;
 	margin-left:1em;
+	margin-bottom: -0.2em;
+	
 }
 
 #selectionButton{
@@ -115,12 +118,11 @@ width: 400px;display: none;
 }
 
 #opBorder,#opFill{
-  margin-top:0.5em;
-  
+  margin-top:-0.3em; 
 }
 
 #changeBorderCol, #changeFillCol{
-	margin-top: -0.5em;
+	margin-top: -0.9em;
 	
 }
 /* This file skins dialog */
