--- a/public_html/styles/msie8.css
+++ b/public_html/styles/msie8.css
@@ -122,7 +122,9 @@ width: 400px;display: none;
 }
 
 #changeBorderCol, #changeFillCol{
-	margin-top: -0.9em;
+	padding-top:-1em;
+	
+	margin-top: -2em;
 	
 }
 
